# otus_lab1

./: CMakeLists.txt  README.md  hello_test.cc  main.cpp
.github/workflows/: release.yml
